2002-05-23  Alan Modra  <amodra@bigpond.net.au>

	* config/tc-alpha.c (assemble_tokens): Protect use of
	ALPHA_RELOC_TABLE with #ifdef RELOC_OP_P.

	* write.c (size_seg): Check adjustment to last frag.
	(SUB_SEGMENT_ALIGN): If HANDLE_ALIGN defined, pad out last frag to
	section alignment.
	* config/obj-coff.c (SUB_SEGMENT_ALIGN): Likewise.
	* config/obj-ieee.c (SUB_SEGMENT_ALIGN): Likewise.
	(write_object_file): Invoke md_do_align if available, and use
	frag_align_code on text sections.
	* config/obj-vms.h (SUB_SEGMENT_ALIGN): Now two args.
	* config/tc-m88k.h (SUB_SEGMENT_ALIGN): Likewise.
	* config/tc-ppc.h (SUB_SEGMENT_ALIGN): Likewise.
	* config/tc-sh.h (SUB_SEGMENT_ALIGN): Likewise.
	* config/tc-i386.h (SUB_SEGMENT_ALIGN): Likewise.  Define for
	BFD_ASSEMBLER too.

2002-05-22  H.J. Lu <hjl@gnu.org>

	* dwarf2dbg.c (dwarf2_directive_loc): Call listing_source_file
	for source file.

2002-05-22  Nick Clifton  <nickc@cambridge.redhat.com>

	* config/tc-arm.c (arm_s_section): Enable for COFF builds as well
	as ELF builds.

2002-05-22  H.J. Lu <hjl@gnu.org>

	* dwarf2dbg.c (dwarf2_emit_insn): Emit only one line symbol
	for one .loc for compiler.

2002-05-22  Thiemo Seufer <seufer@csv.ica.uni-stuttgart.de>

	* config/tc-mips.c (macro): Relax warning, it's toot strict for
	embedded-PIC.

2002-05-22  Thiemo Seufer <seufer@csv.ica.uni-stuttgart.de>

	* config/tc-mips.c (macro2): Add 64 bit drol, dror macros.
	Optimize the rotate by zero case.

2002-05-21  Nick Clifton  <nickc@cambridge.redhat.com>

	* configure.in: Remove accidental enabling of bfd_gas=yes for
	sh-coff targets.
	* configure: Regenerate.

2002-05-18  Kazu Hirata  <kazu@cs.umass.edu>

	* app.c: Fix formatting.
	* as.c: Likewise.
	* ehopt.c: Likewise.
	* expr.c: Likewise.
	* input-file.c: Likewise.
	* listing.c: Likewise.
	* macro.h: Likewise.
	* stabs.c: Likewise.
	* symbols.c: Likewise.

2002-05-17  Alan Modra  <amodra@bigpond.net.au>

	* config/obj-generic.c: Delete file.